@@ -857,7 +857,7 @@ FormationDT::readV3( std::istream & is )
 {
     if ( ! readHeader( is ) ) return false;
     if ( ! readConf( is ) ) return false;
-    if ( ! readSamples( is ) ) return false;
+    if ( ! readSamplesOld( is ) ) return false;
     if ( ! readEnd( is ) ) return false;
 
     if ( ! checkSymmetryNumber() )
