@@ -1,3 +1,11 @@
+2019-05-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* rcsc/formation/formation.cpp:
+	* rcsc/formation/formation.h:
+	* rcsc/formation/formation_dt.cpp:
+	* rcsc/formation/formation_static.cpp:
+	- フォーマット変換ツールのためにメソッド名を修正
+
 2019-05-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* rcsc/formation/formation.cpp:
